--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,17 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+
+    <filter>
+        <filter-name>RegistrationFilter</filter-name>
+        <filter-class>servlet.filter.RegistrationFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>RegistrationFilter</filter-name>
+        <url-pattern>/register/*</url-pattern>
+    </filter-mapping>
+
     <filter>
         <filter-name>AuthenticationFilter</filter-name>
         <filter-class>servlet.filter.AuthenticationFilter</filter-class>
@@ -20,7 +31,7 @@
 
     <filter-mapping>
         <filter-name>AuthenticationFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/mirmedis/*</url-pattern>
     </filter-mapping>
 
     <servlet>
