--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
     <filter>
         <filter-name>EncodingFilter</filter-name>
-        <filter-class>servlet.filter.EncodingFilter</filter-class>
+        <filter-class>controller.filter.EncodingFilter</filter-class>
     </filter>
 
     <filter-mapping>
@@ -13,10 +13,19 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>LocalizationFilter</filter-name>
+        <filter-class>controller.filter.LocalizationFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>LocalizationFilter</filter-name>
+        <url-pattern>/change-lang/*</url-pattern>
+    </filter-mapping>
 
     <filter>
         <filter-name>RegistrationFilter</filter-name>
-        <filter-class>servlet.filter.RegistrationFilter</filter-class>
+        <filter-class>controller.filter.RegistrationFilter</filter-class>
     </filter>
 
     <filter-mapping>
@@ -26,7 +35,7 @@
 
     <filter>
         <filter-name>AuthenticationFilter</filter-name>
-        <filter-class>servlet.filter.AuthenticationFilter</filter-class>
+        <filter-class>controller.filter.AuthenticationFilter</filter-class>
     </filter>
 
     <filter-mapping>
@@ -36,7 +45,7 @@
 
     <servlet>
         <servlet-name>EntityServlet</servlet-name>
-        <servlet-class>servlet.EntityServlet</servlet-class>
+        <servlet-class>controller.servlet.EntityServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>EntityServlet</servlet-name>
