--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,16 @@
     </filter-mapping>
 
     <filter>
+        <filter-name>LogoutFilter</filter-name>
+        <filter-class>com.medical.controller.filter.LogoutFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>LogoutFilter</filter-name>
+        <url-pattern>/mirmedis/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
         <filter-name>AuthenticationFilter</filter-name>
         <filter-class>com.medical.controller.filter.AuthenticationFilter</filter-class>
     </filter>
@@ -45,7 +55,7 @@
 
     <servlet>
         <servlet-name>EntityServlet</servlet-name>
-        <servlet-class>com.medical.controller.servlet.EntityServlet</servlet-class>
+        <servlet-class>com.medical.controller.servlet.MainServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>EntityServlet</servlet-name>
